[package]
name = "solana_rust_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.38"
dotenv = "0.15.0"
envy = "0.4.2"
flate2 = "1.0.34"
futures-util = "0.3.30"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.134"
solana-account-decoder = "2.0.2"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
spl-associated-token-account = "4.0.0"
spl-token = "6.0.0"
spl-token-2022 = "4.0.0"
tokio = { version = "1.42.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
redis = { version = "0.27.6", features = ["aio","tokio-comp","serde_json"] }
mysql = "25.0.1"
mysql_async = "0.34.2"
solana-cli-config = "2.1.7"
serde_derive = "1.0.213"
solana-logger = "2.1.7"
log = "0.4.22"
